dimagi-SalesforceFB/src/objects/Project_Location__c.object
<CustomObject>
    <description>Joins Project, Opportunities, Contracts, and Locations</description>
    <fields>
        <fullName>Include_in_map_view__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want this location to show up in a view of where this project is executing?</inlineHelpText>
        <label>Include in map view?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Location</label>
    <nameField>
        <displayFormat>ProjLoc-{00000}</displayFormat>
        <label>Project Location Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>